XSensor/Peloton-20220817/Peloton-20220817/XSCore90.h

// 8 bits
//typedef uint8_t XBOOL;
typedef bool XBOOL;
enum XBOOL_VALUES
{
	xFALSE = false,
	xTRUE = true
};
// 64 bits
typedef uint64_t SENSORPID;
#define NULL nullptr
enum EPressureUnit
{
	ePRESUNIT_MMHG = 0,	// millimeters of mercury
	ePRESUNIT_INH2O,	// inches of water
	ePRESUNIT_PSI,		// pounds/sq.inch
	ePRESUNIT_KPA,		// kilopascals
	ePRESUNIT_KGCM2,	// kgf/cm^2
	ePRESUNIT_ATM,		// atmospheres
	ePRESUNIT_NCM2,		// newtons/cm^2
	ePRESUNIT_MBAR,		// millibars
	ePRESUNIT_NM2,		// Newton/meter^2
	ePRESUNIT_GCM2,		// grams/cm^2
	ePRESUNIT_BAR,		// bar

	ePRESUNIT_RAW = 255
};
extern "C" XSCORE_API XBOOL XS_GetSensorNameUTF8(SENSORPID spid, uint32_t& charCount, char* pBuffer = NULL);
// Fetch the physical dimensions of a single cell in centimeters. 
// This function is only usable after a sensor configuration is created.
// Returns xTRUE if the dimensions could be fetched.

extern "C" XSCORE_API XBOOL XS_IsX4Sensor(SENSORPID spid);
// Returns xTRUE if this an X4 sensor.

extern "C" XSCORE_API XBOOL XS_IsX4FootSensor(SENSORPID spid, XBOOL& bFootSensor, XBOOL& bLeftFoot);
// Returns xTRUE if this an X4 sensor.
// Sets bFootSensor to xTRUE if the sensor is an X4 foot sensor. 
// Sets bLeftFoot to xTRUE if it's a left foot sensor, and xFALSE for right foot sensors.


// ===========================================================================
//	Calibration Management
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_SetCalibrationFolder(const wchar_t* szCalibrationFolder);
extern "C" XSCORE_API XBOOL XS_SetCalibrationFolderUTF8(const char* szCalibrationFolder);
// When the DLL is provided with a folder for caching calibration files, it will automatically
// manage downloading and selection of an appropriate calibration file.
// While enabled, the other calibration file functions are not enabled.
//
// Typically, this is the best option for managing calibration files
//
// Alternatively, the following functions for direct management of a sensor's calibration files:
// XS_DownloadCalibrations; XS_GetCalibrationName; XS_GetCalibrationInfo; XS_GetCalibrationInfoEx
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API uint32_t XS_DownloadCalibrations(SENSORPID spid, const wchar_t* szCalibrationFolder);
extern "C" XSCORE_API uint32_t XS_DownloadCalibrationsUTF8(SENSORPID spid, const char* szCalibrationFolder);
// Downloads the calibration files stored on the sensor and saves them to a folder.
// Returns number of files downloaded. There may be 0, 1 or more calibration files on the sensor.  
// If 0 is returned, call XS_GetLastErrorCode to determine if an error occurred.
// Usually When more than one file is present, each file is a different calibrated pressure range.


extern "C" XSCORE_API XBOOL XS_GetCalibrationName(uint32_t nCalIndex, uint32_t& dwBufferSize, wchar_t* pBuffer = NULL);
extern "C" XSCORE_API XBOOL XS_GetCalibrationNameUTF8(uint32_t nCalIndex, uint32_t & dwBufferSize, char* pBuffer = NULL);
// This function retrieves the full file path and file name of the indexed calibration file. The index is 0-based.
// This function only works after a calling XS_DownloadCalibrations, and that function returns a count of 1 or more.
//
// If pBuffer is NULL, the size of the required buffer (in bytes) is returned in dwBufferSize. This includes space for a null terminator.
// 
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_GetCalibrationInfo(const wchar_t* szCalibrationFile, uint8_t pressureUnits, float& nMinPressure, float& nMaxPressure);
extern "C" XSCORE_API XBOOL XS_GetCalibrationInfoUTF8(const char* szCalibrationFile, uint8_t pressureUnits, float& nMinPressure, float& nMaxPressure);
// Scans the calibration file and returns its pressure range (using the pressure units - see enum EPressureUnit)
//
// szCalibrationFile is the full path to the file on disk.  eg: c:\\CalFiles\\MyCalFile.xsc
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_GetCalibrationInfoEx(const wchar_t* szCalibrationFile, SENSORPID & spid);
extern "C" XSCORE_API XBOOL XS_GetCalibrationInfoExUTF8(const char* szCalibrationFile, SENSORPID & spid);
// Retrieves the SENSORPID associated with the calibration file.
// szCalibrationFile is the full path to the cal file on disk.  eg: c:\\CalFiles\\MyCalFile.xsc
// Returns xTRUE if the call succeeds.


// ===========================================================================
//	Sensor Configuration - AUTOMATIC
//
//	These functions simplify the process of configuring any connected sensors.
// ===========================================================================

extern "C" XSCORE_API XBOOL XS_AutoConfigByDefault();
extern "C" XSCORE_API XBOOL XS_AutoConfigByDefaultXSN(const wchar_t* szXSNFile);
extern "C" XSCORE_API XBOOL XS_AutoConfigByDefaultXSNUTF8(const char* szXSNFile);
// Constructions a sensor configuration using all found sensors. Default calibration pressure ranges are utilized.
// This function sets the pressure units to ePRESUNIT_MMHG! Be sure to call XS_SetPressureUnit() after calling this function.
// 
// The XSN variant function takes a full file path and filename to construct an XSENSOR session file from all recorded frames.
//
// Example:  
//  wchar_t* szPath[] = L"c:\\mysessions\\session5.xsn";
//	XS_AutoConfigByDefaultXSN(szPath);
//  
// *OR*
//  char_t* szPath[] = "c:\\mysessions\\session5.xsn";
//	XS_AutoConfigByDefaultXSNUTF8(szPath);
//
// Returns xTRUE if the call succeeds.


extern "C" XSCORE_API XBOOL XS_AutoConfig(uint8_t pressureUnits = ePRESUNIT_MMHG, float targetPressure = -1.0f);
// Constructions a sensor configuration using all found sensors. 
// If targetPressure is -1.0, then the default calibration pressure range is used.
// If targetPressure is >= 0, then the nearest matching pressure range is used.
// Sets the calibrated data's pressure units (see enum EPressureUnits). Pressure readings are presented in these units. 
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_AutoConfigXSN(const wchar_t* szXSNFile, uint8_t pressureUnits = ePRESUNIT_MMHG, float targetPressure = -1.0f);
extern "C" XSCORE_API XBOOL XS_AutoConfigXSNUTF8(const char* szXSNFile, uint8_t pressureUnits = ePRESUNIT_MMHG, float targetPressure = -1.0f);
// The XSN variant of XS_AutoConfig function takes a full file path and filename and constructs an XSENSOR session file from all recorded frames.
// See XS_AutoConfigByDefaultXSN for file path example.
// Returns xTRUE if the call succeeds.

extern "C" XSCORE_API XBOOL XS_AutoConfig_SingleSensor(const wchar_t* szCalFile = NULL);
// Adds a sensor to the sensor configuration.
// The full path to the sensor's calibration file should be specified in szCalibrationFile.
// If szCalibrationFile is 0, then only raw data is collected.
//
// Returns xTRUE if the call succeeds.
//
// NOTE: All sensors in the configuration must have calibration files, otherwise only raw values are collected.

extern "C" XSCORE_API XBOOL XS_AddSensorToConfig_AutoCal(SENSORPID spid, uint8_t pressureUnits = ePRESUNIT_MMHG, float nTargetMaxPressure = -1.0f);