XSensor/ToS/XSCore90.py


# XS_GetSensorNameUTF8
# Returns the display name of the sensor. Example: HX210.11.31.M9-LF S0002
# The string is encoded in UTF8made.
# If pBuffer is 0 or NULL, the length of the required buffer (in bytes count) is calculated
# and returned in bufferSize.
# If pBuffer is not null, then bufferSize should be the length of the buffer in bytes.
#
# XBOOL XS_GetSensorNameUTF8(SENSORPID spid, uint32_t& bufferSize, char* pBuffer = NULL);
XS_GetSensorNameUTF8 = libXSC.XS_GetSensorNameUTF8
XS_GetSensorNameUTF8.argtypes = [ctypes.c_ulonglong, ctypes.c_void_p, ctypes.c_void_p]
XS_GetSensorNameUTF8.restype = ctypes.c_ubyte


# XS_IsX4Sensor
# Is this an X4 sensor?
# XBOOL XS_IsX4Sensor(SENSORPID spid);
XS_IsX4Sensor = libXSC.XS_IsX4Sensor
XS_IsX4Sensor.argtypes = [ctypes.c_ulonglong]
XS_IsX4Sensor.restype = ctypes.c_ubyte

# XS_IsX4FootSensor
# Sets bFootSensor to xTRUE if the sensor is an X4 foot sensor. Sets bLeftFoot to xTRUE if its a left foot sensor, and xFALSE for right sensors
# XBOOL XS_IsX4FootSensor(SENSORPID spid, XBOOL& bFootSensor, XBOOL& bLeftFoot);
XS_IsX4FootSensor = libXSC.XS_IsX4FootSensor
XS_IsX4FootSensor.argtypes = [ctypes.c_ulonglong, ctypes.c_void_p, ctypes.c_void_p]
XS_IsX4FootSensor.restype = ctypes.c_ubyte


# ===========================================================================
#	Calibration file management
# ===========================================================================

# XS_SetCalibrationFolder
# When the DLL is provided with a folder for caching calibration files, it will automatically
# manage downloading and selection of an appropriate calibration file.
# While enabled, the other calibration file functions are not enabled.
#
# Typically this is the best option for managing calibration files
#
# Alternatively you may use the following functions for direct management
# of a sensor's calibration files:
# XS_DownloadCalibrations; XS_GetCalibrationName; XS_GetCalibrationInfo; XS_GetCalibrationInfoEx
# XBOOL XS_SetCalibrationFolder(const wchar_t* szCalibrationFolder);
XS_SetCalibrationFolder = libXSC.XS_SetCalibrationFolder
XS_SetCalibrationFolder.argtypes = [ctypes.c_wchar_p]
XS_SetCalibrationFolder.restype = ctypes.c_uint

# XS_SetCalibrationFolderUTF8
# When the DLL is provided with a folder for caching calibration files, it will automatically
# manage downloading and selection of an appropriate calibration file.
# While enabled, the other calibration file functions are not enabled.
#
# Typically this is the best option for managing calibration files
#
# Alternatively you may use the following functions for direct management
# of a sensor's calibration files:
# XS_DownloadCalibrations; XS_GetCalibrationName; XS_GetCalibrationInfo; XS_GetCalibrationInfoEx
# XBOOL XS_SetCalibrationFolder(const wchar_t* szCalibrationFolder);
XS_SetCalibrationFolderUTF8 = libXSC.XS_SetCalibrationFolderUTF8
XS_SetCalibrationFolderUTF8.argtypes = [ctypes.c_char_p]
XS_SetCalibrationFolderUTF8.restype = ctypes.c_uint


# XS_DownloadCalibrations
# Downloads the calibration files stored on the target sensor and saves them to a folder.  Returns number of files downloaded.
# There may be 0, 1 or more calibration files on the sensor.  Usually if there are more then 1, then each file represents
# a different calibrated pressure range.
# uint32_t XS_DownloadCalibrations(SENSORPID spid, const wchar_t* szCalibrationFolder);
XS_DownloadCalibrations = libXSC.XS_DownloadCalibrations
XS_DownloadCalibrations.argtypes = [ctypes.c_ulonglong, ctypes.c_wchar_p]
XS_DownloadCalibrations.restype = ctypes.c_uint

# XS_DownloadCalibrationsUTF8
# Downloads the calibration files stored on the target sensor and saves them to a folder.  Returns number of files downloaded.
# There may be 0, 1 or more calibration files on the sensor.  Usually if there are more then 1, then each file represents
# a different calibrated pressure range.
# uint32_t XS_DownloadCalibrations(SENSORPID spid, const char* szCalibrationFolder);
XS_DownloadCalibrationsUTF8 = libXSC.XS_DownloadCalibrationsUTF8
XS_DownloadCalibrationsUTF8.argtypes = [ctypes.c_ulonglong, ctypes.c_char_p]
XS_DownloadCalibrationsUTF8.restype = ctypes.c_uint

# XS_GetCalibrationName
# After calling XS_DownloadCalibrations(), call this function to retrieve the name of the downloaded calibration file.
# If pBuffer is None, the size of the required buffer (in bytes) is calculated and returned in dwBufferSize.
# 'nCalIndex' is a zero based index.
# NOTE: this function only applies to the XS_DownloadCalibrations() call.  It does not work with XS_AddSensorToConfig_AutoCal().
# XBOOL XS_GetCalibrationName(uint32_t nCalIndex, uint32_t& dwBufferSize, wchar_t* pBuffer = NULL);
XS_GetCalibrationName = libXSC.XS_GetCalibrationName
XS_GetCalibrationName.argtypes = [ctypes.c_uint, ctypes.c_void_p, ctypes.c_void_p]
XS_GetCalibrationName.restype = ctypes.c_ubyte

# XS_GetCalibrationNameUTF8
# After calling XS_DownloadCalibrationsUTF8(), call this function to retrieve the name of the downloaded calibration file.
# If pBuffer is None, the size of the required buffer (in bytes) is calculated and returned in dwBufferSize.
# 'nCalIndex' is a zero based index.
# NOTE: this function only applies to the XS_DownloadCalibrationsUTF8() call.  It does not work with XS_AddSensorToConfig_AutoCal().
# XBOOL XS_GetCalibrationNameUTF8(uint32_t nCalIndex, uint32_t& dwBufferSize, char* pBuffer = NULL);
XS_GetCalibrationNameUTF8 = libXSC.XS_GetCalibrationNameUTF8
XS_GetCalibrationNameUTF8.argtypes = [ctypes.c_uint, ctypes.c_void_p, ctypes.c_void_p]
XS_GetCalibrationNameUTF8.restype = ctypes.c_ubyte

# XS_GetCalibrationInfo
# Scans the calibration file, and returns the maximum pressure (in the provided pressure units - see EPressureUnit)
# szCalibrationFile is the full path to the cal file on disk.  eg: c:\\CalFiles\\MyCalFile.xsc
# XBOOL XS_GetCalibrationInfo(const wchar_t* szCalibrationFile, uint8_t nPressureUnits, float& nMinPressure, float& nMaxPressure);
XS_GetCalibrationInfo = libXSC.XS_GetCalibrationInfo
XS_GetCalibrationInfo.argtypes = [ctypes.c_wchar_p, ctypes.c_ubyte, ctypes.c_void_p, ctypes.c_void_p]
XS_GetCalibrationInfo.restype = ctypes.c_ubyte

# XS_GetCalibrationInfoUTF8
# Scans the calibration file, and returns the maximum pressure (in the provided pressure units - see EPressureUnit)
# szCalibrationFile is the full path to the cal file on disk.  eg: c:\\CalFiles\\MyCalFile.xsc
# XBOOL XS_GetCalibrationInfoUTF8(const char* szCalibrationFile, uint8_t nPressureUnits, float& nMinPressure, float& nMaxPressure);
XS_GetCalibrationInfoUTF8 = libXSC.XS_GetCalibrationInfoUTF8
XS_GetCalibrationInfoUTF8.argtypes = [ctypes.c_char_p, ctypes.c_ubyte, ctypes.c_void_p, ctypes.c_void_p]
XS_GetCalibrationInfoUTF8.restype = ctypes.c_ubyte


# XS_GetCalibrationInfoEx
# Retrieve the SENSORPID from this calibration file
# szCalibrationFile is the full path to the cal file on disk.  eg: c:\\CalFiles\\MyCalFile.xsc
# XBOOL XS_GetCalibrationInfoEx(const wchar_t* szCalibrationFile, SENSORPID& spid);
XS_GetCalibrationInfoEx = libXSC.XS_GetCalibrationInfoEx
XS_GetCalibrationInfoEx.argtypes = [ctypes.c_wchar_p, ctypes.c_void_p]
XS_GetCalibrationInfoEx.restype = ctypes.c_ubyte

# XS_GetCalibrationInfoExUTF8
# Retrieve the SENSORPID from this calibration file
# szCalibrationFile is the full path to the cal file on disk.  eg: c:\\CalFiles\\MyCalFile.xsc
# XBOOL XS_GetCalibrationInfoExUTF8(const char* szCalibrationFile, SENSORPID& spid);
XS_GetCalibrationInfoExUTF8 = libXSC.XS_GetCalibrationInfoExUTF8
XS_GetCalibrationInfoExUTF8.argtypes = [ctypes.c_char_p, ctypes.c_void_p]
XS_GetCalibrationInfoExUTF8.restype = ctypes.c_ubyte


# ===========================================================================
#	AUTOMATIC Sensor Configuration
#
#	These functions simplify the process of configuring any connected sensors.
# ===========================================================================

# XS_AutoConfig
# creates a configuration using all sensors attached to the system.  Downloads any calibration files into memory and uses them.
# Please note that while this is the simplest way to configure the sensors, it is also the slowest because the calibration download takes a fair bit of time.
# XBOOL XS_AutoConfig(EPressureUnits eUnits, float nTargetPressure);
XS_AutoConfig = libXSC.XS_AutoConfig
XS_AutoConfig.argtypes = [ctypes.c_ubyte, ctypes.c_float]
XS_AutoConfig.restype = ctypes.c_ubyte

# XS_AutoConfigXSN
# Similar to XS_AutoConfig(), but also creates a standalone XSN session file.
# The szXSNFile path and file name must be fully specified. eg: "c:\MySessions\Test.xsn".
# XBOOL XS_AutoConfigXSN(const wchar_t* szXSNFile, uint8_t nPressureUnits = ePRESUNIT_MMHG, float nTargetPressure = -1.0f);
XS_AutoConfigXSN = libXSC.XS_AutoConfigXSN
XS_AutoConfigXSN.argtypes = [ctypes.c_wchar_p, ctypes.c_ubyte, ctypes.c_float]
XS_AutoConfigXSN.restype = ctypes.c_ubyte

# XS_AutoConfigXSNUTF8
# Similar to XS_AutoConfig(), but also creates a standalone XSN session file.
# The szXSNFile path and file name must be fully specified. eg: "c:\MySessions\Test.xsn".
# XBOOL XS_AutoConfigXSNUTF8(const char* szXSNFile, uint8_t nPressureUnits = ePRESUNIT_MMHG, float nTargetPressure = -1.0f);
XS_AutoConfigXSNUTF8 = libXSC.XS_AutoConfigXSNUTF8
XS_AutoConfigXSNUTF8.argtypes = [ctypes.c_char_p, ctypes.c_ubyte, ctypes.c_float]
XS_AutoConfigXSNUTF8.restype = ctypes.c_ubyte


# XS_AutoConfigByDefault
# creates a configuration using all sensors attached to the system.  Downloads any calibration files into memory and uses them.
# Please note that while this is the simplest way to configure the sensors, it is also the slowest because the calibration download takes a fair bit of time.
# XBOOL XS_AutoConfigByDefault();
XS_AutoConfigByDefault = libXSC.XS_AutoConfigByDefault
XS_AutoConfigByDefault.restype = ctypes.c_ubyte

# XS_AutoConfigByDefaultXSN
# creates a configuration using all sensors attached to the system.  Downloads any calibration files into memory and uses them.
# Constructs an XSN file to store the frames.
# Please note that while this is the simplest way to configure the sensors, it is also the slowest because the calibration download takes a fair bit of time.
# XBOOL XS_AutoConfigByDefault(const wchar_t* szXSNFile);
XS_AutoConfigByDefaultXSN = libXSC.XS_AutoConfigByDefaultXSN
XS_AutoConfigByDefaultXSN.argtypes = [ctypes.c_wchar_p]
XS_AutoConfigByDefaultXSN.restype = ctypes.c_ubyte

# XS_AutoConfigByDefaultXSN
# creates a configuration using all sensors attached to the system.  Downloads any calibration files into memory and uses them.
# Constructs an XSN file to store the frames.
# Please note that while this is the simplest way to configure the sensors, it is also the slowest because the calibration download takes a fair bit of time.
# XBOOL XS_AutoConfigByDefaultXSNUTF8(const char* szXSNFile);
XS_AutoConfigByDefaultXSNUTF8 = libXSC.XS_AutoConfigByDefaultXSNUTF8
XS_AutoConfigByDefaultXSNUTF8.argtypes = [ctypes.c_char_p]
XS_AutoConfigByDefaultXSNUTF8.restype = ctypes.c_ubyte

# XS_AutoConfig_SingleSensor
# Wraps all of the enumeration and configuration into a single call.
# Optionally provide a path to a calibration file to override any calibration downloads.
# ie: XS_AutoConfig_SingleSensor(L"d:\\MyCalFiles\\PX100363605_20121022_1151.xsc");
# This only works if there is a single sensor present.
# XBOOL XS_AutoConfig_SingleSensor(const wchar_t* szCalFile=NULL);
XS_AutoConfig_SingleSensor = libXSC.XS_AutoConfig_SingleSensor
XS_AutoConfig_SingleSensor.argtypes = [ctypes.c_wchar_p]
XS_AutoConfig_SingleSensor.restype = ctypes.c_ubyte
